* Rework for parsing the registry
* rework of templates, are part of options now (see ?setTemplate, ?getTemplate)
* experimental use of polmineR.Rcpp-package for fast counts for whole corpus
* new convenience function install.corpus to install CWB corpus wrapped into R data package
* adjustments to make package compatible with polmineR.shiny

v0.7.1
* size-method now allows for a param 'sAttribute'
* hits-method reworked, allows for names query vectors
* first version that can be installed on windows

v0.7.0
* rcqp package moved to suggests, to facilitate installation


v0.6.3
* more generic implementation of as.markdown-method to prepare use of templates
* LICENSE file updated
* getTokenStream,character-method: new default behavior for params left and right
* use of templates for as.markdown-method
* Regions and TokenStream class (not for frontend use, so far)
* getTermFrequencies-method merged into count-method
* Corpus class introduced
* decode- and encode-methods introduced

v0.6.2
* refactoring of context-method to prepare more consistent usage
* progress bar for context-method (using blapply)
* progress bar for partitionBundle (using blapply)
* more coherent naming of parameters in partitionBundle-method
* partitionBundle,character-method debugged and more robust
* usage of blapply in as.speeches-method
* hits-method: paramter cqp defaults to FALSE for hits-method, size defaults to FALSE
* new parameter cqp for dispersion-method
* aggregation for dispersion-method when length(sAttribute) == 1
* bugfix for ngrams-method, sample code for the method

v0.6.1
* configure file removed to avoid unwanted bugs

v0.6.0
* this is the first version that passes all CRAN tests and that is available via CRAN
* the 'rcqp' remains the interface to the CWB, but usage of rcqp functions is wrapped into an new new CQI.rcqp (R6) class. CQI.perl and CQI.cqpserver are introduced as alternative interfaces to prepare portability to Windows systems