@@ -83,7 +83,7 @@ setMethod("compare", signature=c(x="partition"), function(
 #'   result <- compare(byName, all, included=TRUE, progress=TRUE)
 #'   dtm <- as.DocumentTermMatrix(result, col="chisquare")
 #' }
-setMethod("compare", signature=c(x="partitionBundle"), function(
+setMethod("compare", "partitionBundle", function(
   x, y, 
   included=FALSE, method="chisquare", verbose=TRUE, mc=getOption("polmineR.mc"), progress=FALSE
 ) {
@@ -95,43 +95,43 @@ setMethod("compare", signature=c(x="partitionBundle"), function(
 })
 
 
-#' @rdname compare-method
-setMethod("compare", "cooccurrences", function(x, y, included = FALSE, method = "ll", mc = TRUE, verbose = TRUE){
-  newObject <- new(
-    'compCooccurrences',
-    encoding = x@encoding, included = included, corpus = x@corpus, sizeCoi = x@partitionSize,
-    sizeRef = ifelse(included == FALSE, y@partitionSize, y@partitionSize - x@partitionSize),
-    stat = data.table()
-  )
-  if (identical(x@pAttribute, y@pAttribute) == FALSE) {
-    warning("BEWARE: cooccurrences objects are not based on the same pAttribute!")
-  } else {
-    newObject@pAttribute <- x@pAttribute
-  }
-  if (verbose == TRUE) message("... preparing tabs for matching")
-  keys <- unlist(lapply(c("a", "b"), function(ab) paste(ab, x@pAttribute, sep="_"))) 
-  setkeyv(x@stat, keys)
-  setkeyv(y@stat, keys)
-  MATCH <- y@stat[x@stat]
-  
-  # remove columns not needed
-  colsToDrop <- c(
-    "ll", "i.ll", "exp_window", "i.exp_window", "rank_ll", "i.rank_ll",
-    "size_window", "i.size_window", "count_a", "i.count_a", "count_b", "i.count_b",
-    "exp_partition", "i.exp_partition"
-    )
-  for (drop in colsToDrop) MATCH[, eval(drop) := NULL, with=TRUE]
-  setnames(MATCH, old=c("count_ab", "i.count_ab"), new=c("count_ref", "count_coi"))
-  
-  if (included == TRUE) MATCH[, "count_ref" := MATCH[["count_ref"]] - MATCH[["count_coi"]] ]
-  
-  newObject@stat <- MATCH
-  for (how in method){
-    if (verbose == TRUE) message("... statistical test: ", how)
-    newObject <- do.call(how, args = list(.Object = newObject))
-  }
-  newObject
-})
+#' #' @rdname compare-method
+#' setMethod("compare", "cooccurrences", function(x, y, included = FALSE, method = "ll", mc = TRUE, verbose = TRUE){
+#'   newObject <- new(
+#'     'compCooccurrences',
+#'     encoding = x@encoding, included = included, corpus = x@corpus, sizeCoi = x@partitionSize,
+#'     sizeRef = ifelse(included == FALSE, y@partitionSize, y@partitionSize - x@partitionSize),
+#'     stat = data.table()
+#'   )
+#'   if (identical(x@pAttribute, y@pAttribute) == FALSE) {
+#'     warning("BEWARE: cooccurrences objects are not based on the same pAttribute!")
+#'   } else {
+#'     newObject@pAttribute <- x@pAttribute
+#'   }
+#'   if (verbose == TRUE) message("... preparing tabs for matching")
+#'   keys <- unlist(lapply(c("a", "b"), function(ab) paste(ab, x@pAttribute, sep="_"))) 
+#'   setkeyv(x@stat, keys)
+#'   setkeyv(y@stat, keys)
+#'   MATCH <- y@stat[x@stat]
+#'   
+#'   # remove columns not needed
+#'   colsToDrop <- c(
+#'     "ll", "i.ll", "exp_window", "i.exp_window", "rank_ll", "i.rank_ll",
+#'     "size_window", "i.size_window", "count_a", "i.count_a", "count_b", "i.count_b",
+#'     "exp_partition", "i.exp_partition"
+#'     )
+#'   for (drop in colsToDrop) MATCH[, eval(drop) := NULL, with=TRUE]
+#'   setnames(MATCH, old=c("count_ab", "i.count_ab"), new=c("count_ref", "count_coi"))
+#'   
+#'   if (included == TRUE) MATCH[, "count_ref" := MATCH[["count_ref"]] - MATCH[["count_coi"]] ]
+#'   
+#'   newObject@stat <- MATCH
+#'   for (how in method){
+#'     if (verbose == TRUE) message("... statistical test: ", how)
+#'     newObject <- do.call(how, args = list(.Object = newObject))
+#'   }
+#'   newObject
+#' })
 
 
 #' @rdname compare-method
