@@ -7,6 +7,8 @@ v0.7.2
 * experimental use of polmineR.Rcpp-package for fast counts for whole corpus
 * new convenience function install.corpus to install CWB corpus wrapped into R data package
 * adjustments to make package compatible with polmineR.shiny
+* cpos-method to get hits more robust if there are not matches for string
+* hits-method removes NAs
 
 v0.7.1
 * size-method now allows for a param 'sAttribute'
